[tool.poetry]
name = "polako-common"
version = "0.1.0"
description = "Common library for Polako Finance microservices"
authors = ["Polako Hedonist <support@polako-finance.com>"]
readme = "README.md"
packages = [{include = "polako_common", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.104.1"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
sqlalchemy = ">=2.0.23"
alembic = ">=1.13.0"
asyncpg = ">=0.29.0"
aio-pika = ">=9.3.1"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
structlog = ">=23.2.0"
asgi-correlation-id = ">=4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-asyncio = ">=0.21.1"
black = ">=23.11.0"
isort = ">=5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
