[tool.poetry]
name = "polako-common"
version = "0.1.0"
description = "Common library for Polako Finance microservices"
authors = ["Polako Finance <support@polako-finance.com>"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.30.0"
aio-pika = "^9.3.1"
jsonschema = "^4.25.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
cffi = "^1.16.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-instrumentation-fastapi = "^0.58b0"
opentelemetry-instrumentation-sqlalchemy = "^0.58b0"
opentelemetry-instrumentation-aiohttp-client = "^0.58b0"
opentelemetry-exporter-otlp = "^1.22.0"
opentelemetry-propagator-b3 = "^1.22.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.1"
black = ">=25.9.0"
isort = ">=5.12.0"
mypy = ">=1.5.1"
flake8 = ">=6.1.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
